# Home-Improvement

./: .editorconfig  .eslintignore  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  Makefile  README.md  Readme.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: __init__.py
backend/tests/: test_health.py
docs/: architecture-overview.md  implementation-plan.md  project-roadmap.md
frontend/: README.md  index.html  package.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.tsx  index.css
infrastructure/: README.md  docker-compose.yml
