[project]
name = "home-improvement-backend"
version = "0.1.0"
description = "FastAPI backend for the Home Improvement Planner"
authors = [{ name = "Home Improvement" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.20",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "httpx>=0.27.0",
  "ruff>=0.6.9",
  "black>=24.8.0",
  "mypy>=1.11.2",
  "types-python-dateutil"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
extend-select = ["I"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
